--- a/第11章 时间序列.md
+++ b/第11章 时间序列.md
@@ -27,6 +27,31 @@ In [13]: now.year, now.month, now.day
 Out[13]: (2017, 9, 25)
 ```
 
+---
+
+##### Notes
+
+1. datetime.datetime.now()/toady() 创建一个当前时间的datetime.datetime对象，datetime.date.today()创建一个当前时间的datetime.date对象。
+
+2. 如何创建datetime,date,time,timedelta对象?
+
+   详情见官方文档链接https://docs.python.org/zh-cn/3.7/library/datetime.html
+
+   需要记住如下知识：
+
+   ~~~python
+   #如何创建三种对象
+   datetime.date(year, month, day)
+   datetime.datetime(year, month, day, hour=0, minute=0, second=0, microsecond=0, tzinfo=None, *, fold=0)
+   datetime.time(hour=0, minute=0, second=0, microsecond=0, tzinfo=None, *, fold=0)
+   #常用的属性和函数
+   date.min/max/year/month/day
+   datetime.min/max/year/month/day/hour/minute/second/microsecend/tzinfo
+   date/datetime.today()  datetime.now() datetime.utcnow()
+   ~~~
+
+---
+
 datetime以毫秒形式存储日期和时间。timedelta表示两个datetime对象之间的时间差：
 
 ```python
@@ -64,9 +89,26 @@ datetime模块中的数据类型参见表10-1。虽然本章主要讲的是panda
 
 tzinfo  存储时区信息的基本类型
 
+---
+
+##### Notes
+
+文档链接如上，需要记住的是timedelta.min/max/days/seconds/microseconds属性
+
+---
+
 ## 字符串和datetime的相互转换
 
+##### Notes
+
+两种方法把datetime对象转换为固定格式的字符串对象。
+
+三种方法把一定格式的字符串转换为datetime对象。
+
+---
+
 利用str或strftime方法（传入一个格式化字符串），datetime对象和pandas的Timestamp对象（稍后就会介绍）可以被格式化为字符串：
+
 ```python
 In [22]: stamp = datetime(2011, 1, 3)
 
@@ -85,7 +127,18 @@ Out[24]: '2011-01-03'
 
 ![](http://upload-images.jianshu.io/upload_images/7178691-de0181e1f6b45eaf.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
+---
+
+##### Notes
+
+上面格式定义的规律：
+
+date方面，四位数为大写，两位数为小写，time方面，全为大写。
+
+---
+
 datetime.strptime可以用这些格式化编码将字符串转换为日期：
+
 ```python
 In [25]: value = '2011-01-03'
 
@@ -123,6 +176,14 @@ Out[32]: datetime.datetime(2011, 12, 6, 0, 0)
 
 pandas通常是用于处理成组日期的，不管这些日期是DataFrame的轴索引还是列。to_datetime方法可以解析多种不同的日期表示形式。对标准日期格式（如ISO8601）的解析非常快：
 
+---
+
+##### Notes
+
+pd.to_datetime（list of str)作用是把一定格式的字符串列表转换为pd.DatetimeIndex对象
+
+---
+
 ```python
 In [33]: datestrs = ['2011-07-06 12:00:00', '2011-08-06 00:00:00']
 
@@ -150,11 +211,17 @@ NaT（Not a Time）是pandas中时间戳数据的null值。
 
 >注意：dateutil.parser是一个实用但不完美的工具。比如说，它会把一些原本不是日期的字符串认作是日期（比如"42"会被解析为2042年的今天）。
 
+##### Notes:以下不需要掌握
+
+---
+
 datetime对象还有一些特定于当前环境（位于不同国家或使用不同语言的系统）的格式化选项。例如，德语或法语系统所用的月份简写就与英语系统所用的不同。表11-3进行了总结。
 
 表11-3 特定于当前环境的日期格式
 
 ![](http://upload-images.jianshu.io/upload_images/7178691-cf0119398273e2b0.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+---
 
 # 11.2 时间序列基础
 
