--- a/第11章 时间序列.md
+++ b/第11章 时间序列.md
@@ -45,8 +45,10 @@ Out[13]: (2017, 9, 25)
    datetime.datetime(year, month, day, hour=0, minute=0, second=0, microsecond=0, tzinfo=None, *, fold=0)
    datetime.time(hour=0, minute=0, second=0, microsecond=0, tzinfo=None, *, fold=0)
    #常用的属性和函数
-   date.min/max/year/month/day
-   datetime.min/max/year/month/day/hour/minute/second/microsecend/tzinfo
+   类属性date.min/max
+   实例属性date./year/month/day
+   类属性datetime.min/max
+   实例属性datetime./year/month/day/hour/minute/second/microsecend/tzinfo
    date/datetime.today()  datetime.now() datetime.utcnow()
    ~~~
 
@@ -93,7 +95,11 @@ tzinfo  存储时区信息的基本类型
 
 ##### Notes
 
-文档链接如上，需要记住的是timedelta.min/max/days/seconds/microseconds属性
+文档链接如上
+
+创建timedelta实例：datetime.timedelta(*days=0*, *seconds=0*, *microseconds=0*, *milliseconds=0*, *minutes=0*, *hours=0*, *weeks=0*)
+
+需要记住的是timedelta.min/max/days/seconds/microseconds属性
 
 ---
 
@@ -255,7 +261,16 @@ DatetimeIndex(['2011-01-02', '2011-01-05', '2011-01-07', '2011-01-08',
               dtype='datetime64[ns]', freq=None)
 ```
 
+---
+
+##### Notes
+
+pandas自带时间字符串解析功能，所以一般凡是传入时间的地方，都可以同时传入datetime.datetime对象，Timestamp对象和常用格式的时间字符串对象。
+
+---
+
 跟其他Series一样，不同索引的时间序列之间的算术运算会自动按日期对齐：
+
 ```python
 In [44]: ts + ts[::2]
 Out[44]: 
