add notes by zyliu

--- a/第11章 时间序列.md
+++ b/第11章 时间序列.md
@@ -109,7 +109,9 @@ tzinfo  存储时区信息的基本类型
 
 两种方法把datetime对象转换为固定格式的字符串对象。
 
-三种方法把一定格式的字符串转换为datetime对象。
+两种方法把一定格式的字符串转换为datetime对象。
+
+pd.to_datetime（list of str)把一定格式的字符串列表转换为pd.DatetimeIndex对象
 
 ---
 
@@ -181,14 +183,6 @@ Out[32]: datetime.datetime(2011, 12, 6, 0, 0)
 ```
 
 pandas通常是用于处理成组日期的，不管这些日期是DataFrame的轴索引还是列。to_datetime方法可以解析多种不同的日期表示形式。对标准日期格式（如ISO8601）的解析非常快：
-
----
-
-##### Notes
-
-pd.to_datetime（list of str)作用是把一定格式的字符串列表转换为pd.DatetimeIndex对象
-
----
 
 ```python
 In [33]: datestrs = ['2011-07-06 12:00:00', '2011-08-06 00:00:00']
@@ -265,7 +259,7 @@ DatetimeIndex(['2011-01-02', '2011-01-05', '2011-01-07', '2011-01-08',
 
 ##### Notes
 
-pandas自带时间字符串解析功能，所以一般凡是传入时间的地方，都可以同时传入datetime.datetime对象，Timestamp对象和常用格式的时间字符串对象。
+pandas自带时间字符串解析功能，所以一般凡是传入时间进行索引/切片的地方，都可以同时传入datetime.datetime对象，Timestamp对象和常用格式的时间字符串对象。
 
 ---
 
