--- a/第11章 时间序列.md
+++ b/第11章 时间序列.md
@@ -693,6 +693,13 @@ DatetimeIndex(['2000-01-01 00:00:00', '2000-01-01 01:30:00',
 
 ![](http://upload-images.jianshu.io/upload_images/7178691-d09e577a10d0e6eb.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
+---
+##### Notes
+1. pd里的时间序列频率字符串都可以用大写表示。
+2. pd的日期偏移量类似与datetime里的timedelta对象。
+
+---
+
 ## WOM日期
 
 WOM（Week Of Month）是一种非常实用的频率类，它以WOM开头。它使你能获得诸如“每月第3个星期五”之类的日期：
@@ -780,6 +787,12 @@ Out[97]:
 Freq: M, dtype: float64
 ```
 
+---
+##### Notes
+1. Series和DataFrame都有shift方法，对values平移，输入正数是后移操作，负数是前移操作，会出现NaN。也可以输入freq参数实现对索引的平移，防止出现缺失值。
+
+---
+
 ## 通过偏移量对日期进行位移
 
 pandas的日期偏移量还可以用在datetime或Timestamp对象上：
@@ -792,7 +805,12 @@ In [100]: now + 3 * Day()
 Out[100]: Timestamp('2011-11-20 00:00:00')
 ```
 
+##### Notes:以下暂时不需要掌握
+
+---
+
 如果加的是锚点偏移量（比如MonthEnd），第一次增量会将原日期向前滚动到符合频率规则的下一个日期：
+
 ```python
 In [101]: now + MonthEnd()
 Out[101]: Timestamp('2011-11-30 00:00:00')
@@ -858,6 +876,12 @@ Out[109]:
 2000-03-31    0.150209
 Freq: M, dtype: float64
 ```
+
+---
+
+##### Notes:以下暂时不需要掌握
+
+---
 
 # 11.4 时区处理
 
@@ -1092,6 +1116,8 @@ DatetimeIndex(['2012-03-07 09:30:00+00:00', '2012-03-08 09:30:00+00:00',
               dtype='datetime64[ns, UTC]', freq='B')
 ```
 
+---
+
 # 11.5 时期及其算术运算
 
 时期（period）表示的是时间区间，比如数日、数月、数季、数年等。Period类所表示的就是这种数据类型，其构造函数需要用到一个字符串或整数，以及表11-4中的频率：
@@ -1149,6 +1175,16 @@ In [159]: index
 Out[159]: PeriodIndex(['2001Q3', '2002Q2', '2003Q1'], dtype='period[Q-DEC]', freq
 ='Q-DEC')
 ```
+
+---
+##### Notes
+1. pd.period_range()类似pd.date_range()，前者生成PeriodIndex()，里面的元素是Period，后者生成DatetimeIndex()，里面的元素是Timestamp。
+2. pd.PeriodIndex()与pd.DatetimeIndex()类似，生成相应类型的索引，不过前者还要输入频率。
+
+---
+
+##### Notes:以下暂时不需要掌握
+---
 
 ## 时期的频率转换
 
@@ -1290,6 +1326,8 @@ Out[187]:
 2012-01-30 16:00:00    5
 dtype: int64
 ```
+
+---
 
 ## 将Timestamp转换为Period（及其反向过程）
 
