add notes by zyliu

--- a/第11章 时间序列.md
+++ b/第11章 时间序列.md
@@ -1579,7 +1579,13 @@ resample是一个灵活高效的方法，可用于处理非常大的时间序列
 表11-5 resample方法的参数
 ![](https://upload-images.jianshu.io/upload_images/7178691-b40a57086c904e83.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
+---
+##### Notes
+1. resample方法需要记住的参数：freq,closed,label,kind,loffset
+2.  书中有错误，label参数应该是默认left，见官方文档：
+   https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.resample.html
 
+---
 
 ## 降采样
 
@@ -1664,7 +1670,7 @@ Out[219]:
 
 此外，也可以通过调用结果对象的shift方法来实现该目的，这样就不需要设置loffset了。
 
-##OHLC重采样
+## OHLC重采样
 
 金融领域中有一种无所不在的时间序列聚合方式，即计算各面元的四个值：第一个值（open，开盘）、最后一个值（close，收盘）、最大值（high，最高）以及最小值（low，最低）。传入how='ohlc'即可得到一个含有这四种聚合值的DataFrame。整个过程很高效，只需一次扫描即可计算出结果：
 ```python
@@ -1676,7 +1682,7 @@ Out[220]:
 2000-01-01 00:10:00    10    11   10     11
 ```
 
-##升采样和插值
+## 升采样和插值
 
 在将数据从低频率转换到高频率时，就不需要聚合了。我们来看一个带有一些周型数据的DataFrame：
 ```python
@@ -1802,6 +1808,9 @@ Out[233]:
 2001Q4  0.046303  0.163344  0.251503 -0.157276
 ```
 
+##### Notes：以下不需要掌握
+---
+
 由于时期指的是时间区间，所以升采样和降采样的规则就比较严格：
 
 - 在降采样中，目标频率必须是源频率的子时期（subperiod）。
@@ -1821,6 +1830,8 @@ Out[234]:
 2002Q2  0.046303  0.163344  0.251503 -0.157276
 2002Q3  0.046303  0.163344  0.251503 -0.157276
 ```
+
+---
 
 # 11.7 移动窗口函数
 
@@ -1847,6 +1858,9 @@ In [239]: close_px.AAPL.rolling(250).mean().plot()
 ![图11-4 苹果公司股价的250日均线](http://upload-images.jianshu.io/upload_images/7178691-3327483eab730b09.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 表达式rolling(250)与groupby很像，但不是对其进行分组，而是创建一个按照250天分组的滑动窗口对象。然后，我们就得到了苹果公司股价的250天的移动窗口。
+
+##### Notes：以下不需要掌握
+---
 
 默认情况下，rolling函数需要窗口中所有的值为非NA值。可以修改该行为以解决缺失数据的问题。其实，在时间序列开始处尚不足窗口期的那些数据就是个特例（见图11-5）：
 ```python
@@ -1980,6 +1994,8 @@ In [268]: result.plot()
 ![图11-10 AAPL 2%回报率的百分等级（一年窗口期）](http://upload-images.jianshu.io/upload_images/7178691-af49e84a90c23c1e.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 如果你没安装SciPy，可以使用conda或pip安装。
+
+---
 
 # 11.8 总结
 
