--- a/第06章 数据加载、存储与文件格式.md
+++ b/第06章 数据加载、存储与文件格式.md
@@ -224,9 +224,9 @@ something  a   b     c   d message
 
 ##### Notes
 
-需要记住的参数：
-
-path,sep,header,index_col,names,skiprows,na_values,nrows,chunksize,encoding
+1. 需要记住的参数：path,sep,header,index_col,names,skiprows,na_values,nrows,chunksize,encoding
+2. header默认为0，即选取第一行为标题，如果输入header = None且指定了names，那么就用names作为标题，如果没有指定names，pd就自行加上0到N-1的索引
+3. index_col用于指定作为索引的列名，如果不输入的话就由pd推断，推断的结果可能是某一列，也有可能是0到N-1
 
 ---
 
@@ -394,9 +394,8 @@ In [53]: !cat examples/tseries.csv
 
 ##### Notes
 
-需要记住的参数：
-
-path,index,header,columns,sep,na_rep
+1. 需要记住的参数：path,index,header,columns,sep,na_rep
+2. index和header的取值是bool，默认是True，把索引和标题传入到文本文件中，可以通过columns指定传入哪几列和列的顺序。
 
 ---
 
