add notes by zyliu

--- a/第08章 数据规整：聚合、合并和重塑.md
+++ b/第08章 数据规整：聚合、合并和重塑.md
@@ -68,6 +68,7 @@ dtype: float64
 ```
 
 层次化索引在数据重塑和基于分组的操作（如透视表生成）中扮演着重要的角色。例如，可以通过unstack方法将这段数据重新安排到一个DataFrame中：
+
 ```python
 In [16]: data.unstack()
 Out[16]: 
@@ -149,6 +150,23 @@ b    1         6    7
 MultiIndex.from_arrays([['Ohio', 'Ohio', 'Colorado'], ['Green', 'Red', 'Green']],
                        names=['state', 'color'])
 ```
+
+---
+
+##### Note
+
+1. 如何创建层次化索引
+   - 创建Series或者DataFrame时，通过嵌套列表创建层次化索引
+   - 通过MultiIndex.from_arrays方法，传入嵌套列表
+
+2. MultiIndex对象有.names属性，类似于Index对象的.name属性
+3. 层次化索引可以类似行列索引进行索引和切片，也可以类似重复索引一样使用索引达成切片的功效
+
+---
+
+##### Note 以下暂时不需要掌握
+
+---
 
 ## 重排与分级排序
 
@@ -279,6 +297,8 @@ c  d  a  b
 6  two  3  6  1
 ```
 
+---
+
 # 8.2 合并数据集
 
 pandas对象中的数据可以通过一些方式进行合并：
@@ -289,7 +309,7 @@ pandas对象中的数据可以通过一些方式进行合并：
 
 我将分别对它们进行讲解，并给出一些例子。本书剩余部分的示例中将经常用到它们。
 
-##数据库风格的DataFrame合并
+## 数据库风格的DataFrame合并
 
 数据集的合并（merge）或连接（join）运算是通过一个或多个键将行连接起来的。这些运算是关系型数据库（基于SQL）的核心。pandas的merge函数是对数据应用这些算法的主要切入点。
 
@@ -384,8 +404,12 @@ Out[44]:
 
 ![表8-1 不同的连接类型](http://upload-images.jianshu.io/upload_images/7178691-e49b3341f4a3c90e.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
+##### Note 以下暂时不需要掌握
+
+---
 
 多对多的合并有些不直观。看下面的例子：
+
 ```python
 In [45]: df1 = pd.DataFrame({'key': ['b', 'b', 'a', 'c', 'a', 'b'],
    ....:                     'data1': range(6)})
@@ -494,6 +518,8 @@ Out[55]:
 
 merge的参数请参见表8-2。使用DataFrame的行索引合并是下一节的主题。
 
+---
+
 表8-2 merge函数的参数
 
 ![](http://upload-images.jianshu.io/upload_images/7178691-35ca716a4f1b8475.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
@@ -501,6 +527,16 @@ merge的参数请参见表8-2。使用DataFrame的行索引合并是下一节的
 ![](http://upload-images.jianshu.io/upload_images/7178691-c86672e733ceccd9.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 indicator 添加特殊的列_merge，它可以指明每个行的来源，它的值有left_only、right_only或both，根据每行的合并数据的来源。
+
+---
+
+##### Note
+
+需要记住的参数有：
+
+left,right,how,on,left_on,right_on,left_index,right_index,copy
+
+---
 
 ## 索引上的合并
 
@@ -551,7 +587,12 @@ Out[61]:
 5   c      5        NaN
 ```
 
+##### Note 以下暂时不需要掌握
+
+---
+
 对于层次化索引的数据，事情就有点复杂了，因为索引的合并默认是多键合并：
+
 ```python
 In [62]: lefth = pd.DataFrame({'key1': ['Ohio', 'Ohio', 'Ohio',
    ....:                                'Nevada', 'Nevada'],
@@ -700,6 +741,8 @@ d   NaN     NaN      11.0     12.0       NaN     NaN
 e   5.0     6.0      13.0     14.0      11.0    12.0
 f   NaN     NaN       NaN      NaN      16.0    17.0
 ```
+
+---
 
 ## 轴向连接
 
@@ -927,6 +970,18 @@ Out[107]:
 
 ![表8-3 concat函数的参数](http://upload-images.jianshu.io/upload_images/7178691-339436563b519415.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
+---
+
+##### Note
+
+1. 详情见官方文档：https://pandas.pydata.org/docs/reference/api/pandas.concat.html?highlight=concate
+
+2. 需要记住的参数有：objs,axis,join,keys,join_axes,ignore_index
+3. 合并时，原有的行/列索引会保留，除非ignore_index，此时axis=轴上的索引会删除重新变成range。keys无论是变成索引还是变成层次化索引都是为了区分开合并的多个数据集。可以用names为层次化索引加名字
+4. concat与merge的区别：merge仅用于横向合并，而且必须选择列或者索引作为合并键，类似数据库风格。
+
+---
+
 ## 合并重叠数据
 
 还有一种数据组合问题不能用简单的合并（merge）或连接（concatenation）运算来处理。比如说，你可能有索引全部或部分重叠的两个数据集。举个有启发性的例子，我们使用NumPy的where函数，它表示一种等价于面向数组的if-else：
@@ -1011,6 +1066,10 @@ Out[119]:
 3  3.0  6.0  14.0
 4  7.0  8.0   NaN
 ```
+
+##### Note 以下暂时不需要掌握
+
+---
 
 # 8.3 重塑和轴向旋转
 
@@ -1413,6 +1472,8 @@ Out[166]:
 8        B     6
 ```
 
-#8.4 总结
+---
+
+# 8.4 总结
 
 现在你已经掌握了pandas数据导入、清洗、重塑，我们可以进一步学习matplotlib数据可视化。我们在稍后会回到pandas，学习更高级的分析。
