add notes by zyliu

--- a/第07章 数据清洗和准备.md
+++ b/第07章 数据清洗和准备.md
@@ -1095,9 +1095,12 @@ str.find()方法：https://docs.python.org/3.7/library/stdtypes.html?highlight=f
 
 str.index()方法：https://docs.python.org/3.7/library/stdtypes.html?highlight=index#str.index
 
-1. 需要注意，split返回的list中，每个元素也都是str
-2. 对于'  train   '这种前后包含空格，中间不包含空格的str来说，strip和split得到的结果相似，不过一个是str副本，一个是只包含一个元素的list
-3. 字符串和列表的都有加法，都是拼接的意思
+1. 需要注意，split返回的list中，每个元素也都是str。split方法不会更改原字符串。如果在前面的字符中找不到分隔符，返回一个只包含前面字符一个元素的列表。maxsplit是从前开始分的。每两个分隔符之间的字符串都会变成列表中的元素，因此列表中可能会出现空字符串。
+2. strip()方法返回的是副本。对于'  train   '这种前后包含空格，中间不包含空格的str来说，strip和split得到的结果相似，不过一个是str副本，一个是只包含一个元素的list
+3. 字符串,列表,元组都有加法，都是拼接的意思。都有乘法，是复制多份后拼接的意思。都不会改变原值。类似与int或者float对象的加法，会在内存中产生一个新值
+4. join()方法里面的参数是Iterable，需要注意的是，Iterable里面的元素必须是字符串
+5. find和index方法都只找第一个出现的元素的位置，都有三个参数，第二个参数是要查找的部分的起点索引，被包括，第三个参数是要查找的部分的终点索引，不被包括。如果不填就默认是查找整个字符串，只填第二个不填第三个，那么第二个后面（包括第二个）都在查找范围内
+6. 字符串,列表,元组都有index和count方法，而且作用基本一样
 
 ---
 
