--- a/第09章 绘图和可视化.md
+++ b/第09章 绘图和可视化.md
@@ -9,6 +9,22 @@ matplotlib是一个用于创建出版质量图表的桌面绘图包（主要是2
 %matplotlib notebook
 ```
 
+---
+
+##### Note
+
+jupyter notebook关于matplotlib有几个魔术指令
+
+https://blog.csdn.net/zeng_xiangt/article/details/81629528
+
+https://blog.csdn.net/qq_26822029/article/details/103064856
+
+网上的说法是使用%matplotlib inline之后图片就会直接内嵌画图，不用输入plt.show()命令，而是直接显示图像，但是在实际中就算不加这一魔术命令所画图片也会自动显示不用plt.show()，不知道为什么
+
+ipython关于matplotlib有魔术指令%matplotlib，和jupyter里面的%matplotlib notebook一个作用，不用plt.show()即可展示图片，同时可以进行交互
+
+---
+
 # 9.1 matplotlib API入门
 
  matplotlib的通常引入约定是：
@@ -36,6 +52,15 @@ In [15]: plt.plot(data)
 
 >笔记：虽然本书没有详细地讨论matplotlib的各种功能，但足以将你引入门。matplotlib的示例库和文档是学习高级特性的最好资源。
 
+---
+
+##### Note
+
+1. 在Matplotlib库中提供了两种风格的API供开发者使用：一种是Pyplot编程接口（state-based）/Matlab风格，一种是面向对象对象的编程接口（object-based）。前者是封装好的较为简洁的，后者是更为灵活，功能更为强大的。https://blog.csdn.net/theonegis/article/details/81230211
+2. 了解一下matplotlib的backends，不需要了解太深
+
+---
+
 ## Figure和Subplot
 
 matplotlib的图像都位于Figure对象中。你可以用plt.figure创建一个新的Figure：
@@ -45,6 +70,21 @@ In [16]: fig = plt.figure()
 ```
 
 如果用的是IPython，这时会弹出一个空窗口，但在Jupyter中，必须再输入更多命令才能看到。plt.figure有一些选项，特别是figsize，它用于确保当图片保存到磁盘时具有一定的大小和纵横比。
+
+---
+
+##### Note
+
+plt.figure()可以不写参数
+
+一些参数需要掌握，facecolor,figsize
+
+```sql
+fig = plt.figure(figsize=plt.figaspect(0.618),facecolor='b')
+fig = plt.figure(figsize=(4,2),facecolor='r')
+```
+
+---
 
 不能通过空Figure绘图。必须用add_subplot创建一个或多个subplot才行：
 
@@ -198,6 +238,16 @@ pyplot接口的设计目的就是交互式使用，含有诸如xlim、xticks和x
 - 调用时带参数，则设置参数值（例如，plt.xlim([0,10])会将X轴的范围设置为0到10）。
 
 所有这些方法都是对当前或最近创建的AxesSubplot起作用的。它们各自对应subplot对象上的两个方法，以xlim为例，就是ax.get_xlim和ax.set_xlim。我更喜欢使用subplot的实例方法（因为我喜欢明确的事情，而且在处理多个subplot时这样也更清楚一些）。当然你完全可以选择自己觉得方便的那个。
+
+---
+
+##### Note
+
+1. pyplot接口的函数都是对当前或最近创建的子图AxesSubplot起作用的
+2. pyplot接口进行图形设置时，plt.something()，不输入参数返回当前设置，输入参数进行设置更改
+3. 面向对象接口进行图形设置时既可以axe.set_something()，也可以axe.set(something1=,something2=,...) 获取设置用axe.get_something()
+
+---
 
 ## 设置标题、轴标签、刻度以及刻度标签
 
